fix for https://jira.cloudera.com/browse/CDH-10420 (GoLive MR test hangs running under YARN in some environments)